fix: package.json updates

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "@sixfold/fast-postgres-date-parser",
   "version": "0.0.2",
   "description": "faster implementation of postgres date parser",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "types": "dist/types/index.d.ts",
   "repository": "git@github.com:6fold/fast-postgres-date-parser.git",
   "author": "Jaan Oras <jaan.oras@gmail.com>",
-  "license": "MIT",
-  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project .",
+    "lint:fix": "yarn lint --fix",
     "release": "rimraf dist && yarn build && yarn test && standard-version",
     "publish-release": "git push --follow-tags origin master && yarn publish",
+    "fix": "yarn lint:fix && yarn prettier:fix",
     "test": "yarn lint && yarn jest",
     "prettier": "prettier \"./src/**/**\"",
     "prettier:check": "yarn prettier --check",
