--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/types/index.d.ts",
   "repository": "git@github.com:6fold/fast-postgres-date-parser.git",
   "author": "Jaan Oras <jaan.oras@gmail.com>",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project .",
