--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^14.6.4",
     "jest": "^26.4.2",
     "micro-benchmark": "^1.3.22",
-    "postgres-date": "1.0.7",
+    "postgres-date": "^2.0.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
