--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@sixfold/editor-config": "^2.0.3",
     "@sixfold/ts-config": "^4.1.0",
     "@types/node": "^14.6.4",
+    "benny": "^3.6.15",
     "jest": "^26.4.2",
-    "micro-benchmark": "^1.3.22",
     "postgres-date": "^2.0.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.3.0",
