--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "benchmark": "ts-node src/benchmark/benchmark.ts"
   },
   "devDependencies": {
-    "@sixfold/editor-config": "^2.0.3",
-    "@sixfold/ts-config": "^4.1.0",
+    "@sixfold/editor-config": "^2.3.0",
+    "@sixfold/ts-config": "^4.1.2",
+    "@types/jest": "^29.2.1",
     "@types/node": "^14.6.4",
-    "benny": "^3.6.15",
-    "jest": "^26.4.2",
+    "benny": "^3.7.1",
+    "jest": "^29.2.2",
     "postgres-date": "^2.0.0",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.3.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "prettier": "@sixfold/editor-config/prettier",
   "jest": {
