--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "benny": "^3.7.1",
     "jest": "^29.2.2",
     "postgres-date": "^2.0.0",
+    "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
