chore: migrate to artifact registry's npm registry (#12)
* chore: migrate to artifact registry's npm registry

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "tslint --project .",
     "lint:fix": "yarn lint --fix",
     "release": "rimraf dist && yarn build && yarn test && standard-version",
-    "publish-release": "git push --follow-tags origin master && yarn publish",
+    "publish-release": "git push --follow-tags origin master && yarn authenticate && npm publish",
+    "authenticate": "npx google-artifactregistry-auth",
     "fix": "yarn lint:fix && yarn prettier:fix",
     "test": "yarn lint && yarn jest",
     "prettier": "prettier \"./src/**/**\"",
