--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "tslint --project .",
+    "lint": "eslint .",
     "lint:fix": "yarn lint --fix",
     "release": "rimraf dist && yarn build && yarn test && standard-version",
     "publish-release": "git push --follow-tags origin master && yarn authenticate && npm publish",
     "authenticate": "npx google-artifactregistry-auth",
-    "fix": "yarn lint:fix && yarn prettier:fix",
+    "fix": "yarn lint:fix",
     "test": "yarn lint && yarn jest",
-    "prettier": "prettier \"./src/**/**\"",
-    "prettier:check": "yarn prettier --check",
-    "prettier:fix": "yarn prettier --write",
     "benchmark": "ts-node src/benchmark/benchmark.ts"
   },
   "devDependencies": {
-    "@sixfold/editor-config": "^2.3.0",
-    "@sixfold/ts-config": "^4.1.2",
+    "@sixfold/editor-config": "^4.1.0",
+    "@sixfold/eslint-plugin": "^2.7.0",
+    "@sixfold/ts-config": "^5.1.2",
     "@types/jest": "^29.2.1",
-    "@types/node": "^14.6.4",
+    "@types/node": "^22",
     "benny": "^3.7.1",
+    "eslint": "^8.57.1",
     "jest": "^29.2.2",
     "postgres-date": "^2.0.0",
+    "prettier": "^3",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.5.4"
   },
   "prettier": "@sixfold/editor-config/prettier",
   "jest": {
